# biomeinator

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  setup.bat  vs-chromium-project.txt
shaders/: shader.hlsl
src/: buffer_helper.cpp  common_structs.h  dxr_common.h  external.cpp  main.cpp  renderer.cpp
src/rendering/: acs_helper.cpp  acs_helper.h  as_helper.cpp  as_helper.h  buffer_helper.cpp  buffer_helper.h  camera.cpp  camera.h  common_structs.cpp  common_structs.h  drawable.cpp  drawable.h  dxr_common.h  dxr_includes.h  freeable.h  host_structs.h  instance.h  managed_buffer.cpp  managed_buffer.h  param_block_manager.cpp  param_block_manager.h  renderer.cpp  renderer.h  scene.cpp  scene.h  scene_manager.cpp  scene_manager.h  to_free_list.cpp  to_free_list.h  window_manager.cpp  window_manager.h
src/rendering/buffer/: acs_helper.cpp  acs_helper.h  buffer_helper.cpp  buffer_helper.h  managed_buffer.cpp  managed_buffer.h  mapped_array.h  mapped_buffer.cpp  mapped_buffer.h  to_free_list.cpp  to_free_list.h
src/rendering/common/: common_hitgroups.h  common_preamble.h  common_registers.h  common_structs.cpp  common_structs.h
src/rendering/scene/: camera.cpp  camera.h  gltf_loader.cpp  gltf_loader.h  scene.cpp  scene.h  texture_loader.cpp  texture_loader.h
src/shaders/: common_structs.hlsl  common_structs.hlsli  global_params.hlsli  global_params.slang  light_sampling.hlsli  light_sampling.slang  main.slang  materials.slang  math.hlsli  path_tracing.hlsli  path_tracing.slang  path_tracing_common.slang  payload.hlsli  payload.slang  rng.hlsl  rng.hlsli  shader.hlsl
src/shaders/util/: color.hlsli  color.slang  math.hlsli  math.slang  rng.slang
src/util/: util.h
test_scenes/: emissive_cube.blend
test_scenes/cornell_box/: cornell_box.blend  cornell_box.gltf
test_scenes/emissive_cube/: emissive_cube.blend  emissive_cube.glb  emissive_cube.gltf
test_scenes/emissive_monkey/: emissive_monkey.blend  emissive_monkey.gltf
test_scenes/fancy_cornell_box/: fancy_cornell_box.blend  fancy_cornell_box.gltf
test_scenes/many_monkeys/: many_monkeys.blend  many_monkeys.gltf
test_scenes/penguin_gallery/: penguin_gallery.blend  penguin_gallery.gltf
test_scenes/textured_cube/: textured_cube.blend  textured_cube.gltf
test_scenes/triangle_sandwich/: triangle_sandwich.blend  triangle_sandwich.gltf
test_scenes/two_triangles/: two_triangles.blend  two_triangles.gltf
